--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 <body class="antialiased">
     <div class="container">
         <h1 class="text-4xl font-bold mb-6 text-gray-800">SQL Query Paste Tool</h1>
-        <p class="text-lg text-gray-600 mb-8">Paste your SQL queries below and use the "Copy" button to easily copy them.</p>
+        <p class="text-lg text-gray-600 mb-8">AFTER CLICKING ON YOUR TASK,,, SQL queries WILL SHOW below and use the "Copy" button to easily copy them.</p>
 
         <textarea
             id="sqlQueryInput"
@@ -154,7 +154,7 @@
             Copy Query
         </button>
 
-        <div id="messageBox" class="message-box">
+        <div id="messageBox" class="message-box"A>
             <p id="messageText"></p>
         </div>
 
