--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <textarea
             id="sqlQueryInput"
             class="w-full p-4 mb-6 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-            placeholder="Paste your SQL query here..."
+            placeholder="your SQL query will show here..."
         ></textarea>
 
         <button
