--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="mt-10">
             <h2 class="text-2xl font-bold mb-4 text-gray-800">Example SQL Queries</h2>
             <p class="text-md text-gray-600 mb-6">Click on any query to load it into the text area above.</p>
-
+ <p> 🗣️🗣️🗣️ REMEBER,,,,TO USE THE CORRECT DATABASE,,, EITHER BY (USE DATABASEname) or click on it manually on the top left of your screen,,, </p>
             <div id="exampleQueriesContainer">
                 <!-- Task 1: Installation of MS SQL server (Database and Table Creation, Data Insertion, Views) -->
                 <div class="query-example" data-query="CREATE DATABASE sports;">
