--- a/index.html
+++ b/index.html
@@ -140,7 +140,15 @@
     <div class="container">
         <h1 class="text-4xl font-bold mb-6 text-gray-800">SQL Query Paste Tool</h1>
         <p class="text-lg text-gray-600 mb-8">AFTER CLICKING ON YOUR TASK,,, SQL queries WILL SHOW below and use the "Copy" button to easily copy them.</p>
-
+<div class="flex items-center justify-center h-screen bg-gray-100">
+‎  <div class="bg-white p-6 rounded shadow-md text-center">
+‎    <h2 class="text-xl font-semibold mb-4">Download Your File</h2>
+‎    <a href="DB/index.html" download
+‎       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
+‎      📥 Download
+‎    </a>
+‎  </div>
+‎</div>
         <textarea
             id="sqlQueryInput"
             class="w-full p-4 mb-6 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
