--- a/index.html
+++ b/index.html
@@ -140,15 +140,6 @@
     <div class="container">
         <h1 class="text-4xl font-bold mb-6 text-gray-800">SQL Query Paste Tool</h1>
         <p class="text-lg text-gray-600 mb-8">AFTER CLICKING ON YOUR TASK,,, SQL queries WILL SHOW below and use the "Copy" button to easily copy them.</p>
-<div class="flex items-center justify-center h-screen bg-gray-100">
-‎  <div class="bg-white p-6 rounded shadow-md text-center">
-‎    <h2 class="text-xl font-semibold mb-4">Download Your File</h2>
-‎    <a href="DB/index.html" download
-‎       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
-‎      📥 Download
-‎    </a>
-‎  </div>
-‎</div>
         <textarea
             id="sqlQueryInput"
             class="w-full p-4 mb-6 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -335,6 +326,15 @@ INSERT INTO pAilments (patNo, ailment, status) VALUES (3233, 'TB', 'severe');</c
             </div>
         </div>
     </div>
+<div class="flex items-center justify-center h-screen bg-gray-100">
+‎  <div class="bg-white p-6 rounded shadow-md text-center">
+‎    <h2 class="text-xl font-semibold mb-4">Download Your File</h2>
+‎    <a href="DB/index.html" download
+‎       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
+‎      📥 Download the source code for later use,,,incase the internet is off,,,, 😎
+‎    </a>
+‎  </div>
+‎</div>
     <footer style="text-align: center;" class="mt-10 text-gray-600">
         <p>&copy; 2025 SQL Query Tool. All rights reserved.,,,,By Agatha </p>
     </footer>
