--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@ INSERT INTO pAilments (patNo, ailment, status) VALUES (3233, 'TB', 'severe');</c
             </div>
         </div>
     </div>
-<div class="flex items-center justify-center h-screen bg-gray-100">
-‎  <div class="bg-white p-4 rounded shadow-md text-center">
+<div class="flex items-center justify-center bg-gray-100">
+‎  <div class="bg-blue-700 p-4 rounded shadow-md text-center">
 ‎    <h2 class="text-xl font-semibold mb-4">Download the source code for later use,,,incase of emergency ,,,, 😎</h2>
 ‎    <a href="DB/index.html" download
 ‎       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
