--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ INSERT INTO pAilments (patNo, ailment, status) VALUES (3233, 'TB', 'severe');</c
 ‎  </div>
 ‎</div>
     <footer style="text-align: center;" class="mt-10 text-gray-600">
-        <p>&copy; 2025 SQL Query Tool. All rights reserved.,,,,By Agatha </p>
+        <p>&copy; 2025 SQL Query Tool. All rights reserved.,,,,By Ag,,, </p>
     </footer>
     <script>
         // Get references to the textarea, copy button, and message box
