--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
         <button id="darkModeToggle" class="mb-6 px-4 py-2 rounded-lg text-black font-semibold">
             Toggle Dark Mode
         </button>
+<a href="about.html" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition">
+  Go to theory part
+</a>
 
         <!-- Textarea where SQL queries will be displayed and copied from -->
         <textarea
