--- a/section2.html
+++ b/section2.html
@@ -145,6 +145,10 @@
     <div class="content-container">
         <header class="text-center mb-8">
             <h1 class="text-3xl font-bold text-gray-800 mb-4">THEORY part</h1>
+            <a href="index.html" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition">
+  Go to the main page
+</a>
+
             <p class="text-lg text-gray-600">This document provides theoretical explanations and practical SQL implementations as per Observation Checklist and Candidate Practical tasks.</p>
         </header>
 
