--- a/section2.html
+++ b/section2.html
@@ -607,7 +607,21 @@ UPDATE stMarks SET Avg = (Maths + Biology + Chemistry + Physics) / 4;
             </code></pre>
         </section>
 
-
+  <!-- Download section -->
+    <div class="flex items-center justify-center bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow-md mt-10">
+        <div class="bg-blue-700 dark:bg-indigo-700 p-4 rounded shadow-md text-center">
+            <h2 class="text-xl font-semibold mb-4 text-white">Download the source code for later use, in case of emergency! 😎</h2>
+            <a href="DB/theory.html" download
+               class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
+                📥 Download
+            </a>
+             <h2 class="text-xl font-semibold mb-4 text-white">Download checklist zip file and extract</h2>
+            <a href="DB/checklist.zip" download
+               class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-medium py-2 px-4 rounded transition">
+                📥 Download
+            </a>
+        </div>
+    </div>
         <footer class="text-center mt-10 text-gray-600">
             <p>&copy; 2025 Comprehensive Database Management Answers. All rights reserved.</p>
         </footer>
